# tomok

./: .dockerignore  Dockerfile  README.md  __init__.py  auto_play.ipynb  docker-compose.yml  entrypoint.sh  environment.yml  guid 기반 검색을 적용한 RuleIFC 작성 예시.ipynb  ifc_explorer.py  pyproject.toml  requirements.txt  ruleifc_kds142054_040305_01.py  sample_kds142054_040305_01.py  setup.py  temp.py  temp.sh  temp_ruleifc.py  test.ipynb  test.py  verify_test.ipynb  대성요청확장파일_v4.ifc
DBinsert/: insert.ipynb  standard_book.ipynb  standard_item.ipynb
acc_demo/: acc.py  download_ifc.py
acc_demo2/: __init__.py  acc_utils.py  main.py  page_file_upload.py
acc_server/: .gitignore  Dockerfile  acc.py  acc_utils.py  app.py  config_tree.txt  decorator.py  entrypoint.sh  environment.yml  ifc.py  requirements.txt  run.sh
acc_server/acc/: acc.ipynb
acc_server2/: README.md  acc.py  app.py  config_tree.txt  run.sh  secret.py
api_server/: .dockerignore  Dockerfile  README.md  app.py  config_tree.txt  entrypoint.sh  environment.yml  envrionment_20241209.yml  openapi_generator.py  run.sh
ifc_verifier/: __init__.py
notebooks/: KDS_24_14_21_4_6_5_1_5.py  PSC_girder_bridge_updated03.ifc  PSC_girder_bridge_updated05.ifc  psc_girder_bridge_final.ifc  test.ipynb
ruleifc/: ruleifc_kds142054_040305_01.py
ruleunits/: __init__.py  kds142054_040305_01.py  kds142054_040305_05.py
server/: README.md  config_tree.txt  ifc.py  requirements.txt  utils.py  utils_crypt.py
tempfiles/: __init__.py  kds142054_040305_01.py  kds142054_040305_03.py  kds142054_040305_04.py  kds142054_040305_05.py
tomok/: __init__.py  requirements.txt
(+2078 files in other folders)
