[tool.poetry]
name = "tomok"
version = "0.1.0"
description = ""
authors = ["Taemin Lee <persuade@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
ipykernel = "^6.23.3"
mistune = "^3.0.1"
ifcopenshell = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
