[tool.poetry]
name = "tomok"
version = "0.1.0"
description = ""
authors = ["Taemin Lee <persuade@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
ipykernel = "^6.23.3"
mistune = "^3.0.1"
ifcopenshell = "0.7.0.240406"
scikit-learn = "^1.5.2"
jinja2 = "^3.1.4"
connexion = "2.14.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
