[tool.poetry]
name = "tomok"
version = "0.1.0"
description = ""
authors = ["Taemin Lee <persuade@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
ipykernel = "^6.23.3"
mistune = "^3.0.1"
ifcopenshell = "0.7.0.240406"
scikit-learn = "^1.5.2"
jinja2 = "^3.1.4"

aiohttp-cors = "^0.7.0"
tornado = "^6.4.2"
hydra-core = "^1.3.2"
hydra-colorlog = "^1.2.0"
hydra-optuna-sweeper = "^1.2.0"
rich = "^13.9.4"
setproctitle = "^1.3.4"
cryptography = "^44.0.0"
pandas = "^2.2.3"
lark = "^1.2.2"
numpy = "<2.0"
ruamel-yaml = "^0.18.6"
connexion = {version = "2.14.2", extras = ["aiohttp", "swagger-ui"]}
contextvars = "^2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
